k8s/base/ciam/ping-authorize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-authorize-svc
spec:
  ports:
    - port: 1443
      name: http
      targetPort: 1443
  selector:
    app: ping-authorize
  type: ClusterIP
