k8s/base/ciam/ping-authorize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-authorize-ing
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx-ingress
  rules:
  - host: ping-authorize.dev.ciam-portal.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ping-authorize-svc
            port:
              number: 1443
